# TNSR

./: LICENSE  README.md  pyproject.toml
scripts/ball/: ball_initial.sh  ball_refine.sh
scripts/bottle/: bottle_initial.sh  bottle_refine.sh
scripts/ellipsoid/: ellipsoid_initial.sh  ellipsoid_refine.sh
scripts/glass/: glass_initial.sh  glass_refine.sh
scripts/optical/: optical_initial.sh  optical_refine.sh
scripts/waterball/: waterball_initial.sh  waterball_refine.sh
tnsr/: tnsr_base_surface_model.py  tnsr_config.py  tnsr_field.py  tnsr_model.py  tnsr_neus.py  tnsr_pipeline.py  tnsr_sampler.py  tnsr_trainer.py
